--- a/css/edit.less
+++ b/css/edit.less
@@ -30,15 +30,8 @@
 
 #stepPanel {
   .algorithm {
-    .var-node {
-      .var-value-input {
-        display: none;
-      }
-    }
-    .compare-node {
-      .compare-operation-input {
-        display: none;
-      }
+    .view-only {
+      display: none;
     }
     .sortable-highlight {
       background-color: greenyellow;
