--- a/css/view.less
+++ b/css/view.less
@@ -14,17 +14,12 @@
   .handle {
     cursor: default !important;
   }
-  .node {
-    &.var-node {
-      .var-value {
-        display: none;
-      }
-    }
-    &.compare-node {
-      .compare-operation {
-        display: none;
-      }
-    }
+  .edit-only {
+    display: none;
+  }
+  input, select {
+    background-color: transparent !important;
+    border-color: transparent !important;
   }
 }
 
