--- a/partials/new.phtml
+++ b/partials/new.phtml
@@ -1,5 +1,6 @@
 <?php
 if (!defined('BASEDIR')) die('You cannot call this script directly !');
+global $l10n;
 
 // create a new algorithm and redirect to edit-page if a user is signed in
 if ($__uid) {
