--- a/partials/register.phtml
+++ b/partials/register.phtml
@@ -1,5 +1,6 @@
 <?php
 if (!defined('BASEDIR')) die('You cannot call this script directly !');
+global $l10n;
 
 // redirect if the user is already signed in
 if ($__uid) {
