--- a/partials/user.phtml
+++ b/partials/user.phtml
@@ -1,5 +1,6 @@
 <?php
 if (!defined('BASEDIR')) die('You cannot call this script directly !');
+global $l10n;
 
 // if a user name is specified, redirect to uid
 if (isset($_GET['name'])) {
