--- a/partials/view.phtml
+++ b/partials/view.phtml
@@ -1,5 +1,6 @@
 <?php
 if (!defined('BASEDIR')) die('You cannot call this script directly !');
+global $l10n;
 
 // redirect if no aid is specified
 if (!$__aid) {
