combo boxes for compact design

--- a/css/algorithm.less
+++ b/css/algorithm.less
@@ -38,6 +38,10 @@
         cursor: move;
       }
 
+      .invalid {
+        display: none;
+      }
+
       .node-box {
         min-width: 20px;
         font-family: monospace, Courier;
