--- a/css/edit.less
+++ b/css/edit.less
@@ -12,6 +12,7 @@
       float: right;
       .btn-var-count {
         margin-right: 2px;
+        cursor: default;
       }
     }
     .form-group {
@@ -38,10 +39,6 @@
       border: 2px dashed forestgreen;
       height: 20px;
       list-style-type: none;
-    }
-    .highlight {
-      background-color: greenyellow;
-      font-weight: bold;
     }
   }
 
