enable arrays ConstantNode => ReturnNode, VariableNode => ValueNode

--- a/css/algorithm.less
+++ b/css/algorithm.less
@@ -1,10 +1,10 @@
 @arithmetic-node-color: #82ffd2;
 @assign-node-color: #ffb181;
 @compare-node-color: #fff465;
-@constant-node-color: #a6e0ff;
+@return-node-color: #a6e0ff;
 @if-node-color: #b2e792;
 @inc-node-color: #b75946;
-@var-node-color: #d3d3d3;
+@value-node-color: #d3d3d3;
 @while-node-color: #d5a2da;
 
 .algorithm {
@@ -108,8 +108,8 @@
       &.compare-node {
         .nodeStyle(@compare-node-color)
       }
-      &.constant-node {
-        .nodeStyle(@constant-node-color)
+      &.return-node {
+        .nodeStyle(@return-node-color)
       }
       &.if-node {
         .nodeStyle(@if-node-color)
@@ -117,8 +117,8 @@
       &.inc-node {
         .nodeStyle(@inc-node-color)
       }
-      &.var-node {
-        .nodeStyle(@var-node-color)
+      &.value-node {
+        .nodeStyle(@value-node-color)
       }
       &.while-node {
         .nodeStyle(@while-node-color)
