--- a/css/edit.less
+++ b/css/edit.less
@@ -26,6 +26,9 @@
         cursor: default;
       }
     }
+    .size-group {
+      width: 55px;
+    }
   }
 }
 
@@ -56,8 +59,8 @@
     #btn-add-compare {
       .btnStyle(@compare-node-color);
     }
-    #btn-add-constant {
-      .btnStyle(@constant-node-color);
+    #btn-add-return {
+      .btnStyle(@return-node-color);
     }
     #btn-add-if {
       .btnStyle(@if-node-color);
@@ -65,8 +68,8 @@
     #btn-add-inc {
       .btnStyle(@inc-node-color);
     }
-    #btn-add-var {
-      .btnStyle(@var-node-color);
+    #btn-add-value {
+      .btnStyle(@value-node-color);
     }
     #btn-add-while {
       .btnStyle(@while-node-color);
