validation of combo boxes, loads of bug fixes

--- a/css/edit.less
+++ b/css/edit.less
@@ -34,14 +34,15 @@
 
 #stepPanel {
   .algorithm {
-    .view-only {
-      display: none;
-    }
     .sortable-highlight {
       background-color: greenyellow;
       border: 2px dashed forestgreen;
       height: 20px;
       list-style-type: none;
+    }
+    .error {
+      background-color: #ff4a46;
+      border: 1px dashed red;
     }
   }
 
