--- a/partials/view.phtml
+++ b/partials/view.phtml
@@ -63,10 +63,12 @@ if ($__algorithm && ($__public || $__owner)):
                                             id="btn-reset">
                                         <span class="glyphicon glyphicon-fast-backward"></span>
                                     </button>
-                                    <button type="button" class="btn btn-default" title="<?= $l10n['step_back'] ?>"
-                                            id="btn-back">
-                                        <span class="glyphicon glyphicon-step-backward"></span>
-                                    </button>
+                                    <?php if (false): // TODO: step back ?>
+                                        <button type="button" class="btn btn-default" title="<?= $l10n['step_back'] ?>"
+                                                id="btn-back">
+                                            <span class="glyphicon glyphicon-step-backward"></span>
+                                        </button>
+                                    <?php endif ?>
                                     <button type="button" class="btn btn-default" title="<?= $l10n['play'] ?>"
                                             id="btn-play">
                                         <span class="glyphicon glyphicon-play" id="img-play"></span>
